--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 bertopic==0.16.3
 casanova==2.0.2
 fog==0.11.9
+matplotlib==3.7.5 
+numpy==1.24.4
 protobuf==5.28.2
 sentencepiece==0.2.0
 tqdm==4.66.3
 Unidecode==1.3.8
-matplolib==3.9.3
